syntax = "proto3";

option java_multiple_files = true;
option java_package = "<%= packageName %>.grpc";

import "google/protobuf/empty.proto";

package <%= packageName %>;

service ConfigurationPropertiesReportService {
    rpc GetConfigurationProperties(google.protobuf.Empty) returns (ApplicationConfigurationProperties);
}

message ApplicationConfigurationProperties {
    map<string, ContextConfigurationProperties> contexts = 1;
}

message ContextConfigurationProperties {
    map<string, ConfigurationPropertiesBeanDescriptor> beans = 1;
    string parentId = 2;
}

message ConfigurationPropertiesBeanDescriptor {
    string prefix = 1;
    map<string, string> properties = 2;
}
