syntax = "proto3";

option java_multiple_files = true;
option java_package = "<%=packageName%>.grpc";

import "google/protobuf/empty.proto";

package <%=packageName%>;

service LogsService {
    rpc GetLoggers(google.protobuf.Empty) returns (stream Logger);
    rpc ChangeLevel(Logger) returns (google.protobuf.Empty);
}

enum Level {
    UNDEFINED = 0;
    OFF = 1;
    ERROR = 2;
    WARN = 3;
    INFO = 4;
    DEBUG = 5;
    TRACE = 6;
    ALL = 7;
}

message Logger {
    string name = 1;
    Level level = 2;
}
